--- a/app/src/main/res/xml/activity_main_midterm2_scene.xml
+++ b/app/src/main/res/xml/activity_main_midterm2_scene.xml
@@ -7,6 +7,8 @@
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@id/start"
         motion:duration="1000">
+        <OnClick motion:targetId="@+id/linearLayout4"
+            motion:clickAction="toggle"/>
        <KeyFrameSet>
        </KeyFrameSet>
     </Transition>
